test_results/model_comparison_20251206_145625_report.txt
================================================================================
ROOT AGENT MULTI-MODEL TEST REPORT
================================================================================

Test Name: model_comparison_20251206_145625
Timestamp: 20251206_145625
Repository: psf/requests

Test Issue: Leading slash in uri followed by column fails
Issue URL: https://github.com/psf/requests/issues/6643
Issue ID: 6643

Issue Description:
--------------------------------------------------------------------------------
Leading slash in uri followed by column fails.

## Expected Result

```python
requests.get('http://127.0.0.1:10000//v:h')
<Response [200]>
```

## Actual Result

```python
Traceback (most recent call last):
  File "/usr/local/lib/python3.11/site-packages/urllib3/util/url.py", line 425, in parse_url
    host, port = _HOST_PORT_RE.match(host_port).groups()  # type: ignore[union-attr]
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'groups'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/local/lib/python3.11/site-packages/requests/api.py", line 73, in get
    return request("get", url, params=params, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/api.py", line 59, in request
    return session.request(method=method, url=url, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/sessions.py", line 589, in request
    resp = self.send(prep, **send_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/sessions.py", line 703, in send
    r = adapter.send(request, **kwargs)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/adapters.py", line 486, in send
    resp = conn.urlopen(
           ^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/urllib3/connectionpool.py", line 711, in urlopen
    parsed_url = parse_url(url)
                 ^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/urllib3/util/url.py", line 451, in parse_url
    raise LocationParseError(source_url) from e
urllib3.exceptions.LocationParseError: Failed to parse: //v:h
```

## Reproduction Steps

```python
import requests
requests.get('http://127.0.0.1:10000//v:h')

```

## System Information

    $ python -m requests.help

```json
{
  "chardet": {
    "version": null
  },
  "charset_normalizer": {
    "version": "3.3.2"
  },
  "cryptography": {
    "version": ""
  },
  "idna": {
    "version": "3.6"
  },
  "implementation": {
    "name": "CPython",
    "version": "3.11.8"
  },
  "platform": {
    "release": "5.10.209-198.812.amzn2.x86_64",
    "system": "Linux"
  },
  "pyOpenSSL": {
    "openssl_version": "",
    "version": null
  },
  "requests": {
    "version": "2.31.0"
  },
  "system_ssl": {
    "version": "300000b0"
  },
  "urllib3": {
    "version": "2.2.1"
  },
  "using_charset_normalizer": true,
  "using_pyopenssl": false
}
```

<!-- This command is only available on Requests v2.16.4 and greater. Otherwise,
please provide some basic information about your system (Python version,
operating system, &c). -->


================================================================================
QUERY USED FOR TESTING
================================================================================

Issue Title: Leading slash in uri followed by column fails

Issue Description:
Leading slash in uri followed by column fails.

## Expected Result

```python
requests.get('http://127.0.0.1:10000//v:h')
<Response [200]>
```

## Actual Result

```python
Traceback (most recent call last):
  File "/usr/local/lib/python3.11/site-packages/urllib3/util/url.py", line 425, in parse_url
    host, port = _HOST_PORT_RE.match(host_port).groups()  # type: ignore[union-attr]
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'groups'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/local/lib/python3.11/site-packages/requests/api.py", line 73, in get
    return request("get", url, params=params, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/api.py", line 59, in request
    return session.request(method=method, url=url, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/sessions.py", line 589, in request
    resp = self.send(prep, **send_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/sessions.py", line 703, in send
    r = adapter.send(request, **kwargs)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/adapters.py", line 486, in send
    resp = conn.urlopen(
           ^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/urllib3/connectionpool.py", line 711, in urlopen
    parsed_url = parse_url(url)
                 ^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/urllib3/util/url.py", line 451, in parse_url
    raise LocationParseError(source_url) from e
urllib3.exceptions.LocationParseError: Failed to parse: //v:h
```

## Reproduction Steps

```python
import requests
requests.get('http://127.0.0.1:10000//v:h')

```

## System Information

    $ python -m requests.help

```json
{
  "chardet": {
    "version": null
  },
  "charset_normalizer": {
    "version": "3.3.2"
  },
  "cryptography": {
    "version": ""
  },
  "idna": {
    "version": "3.6"
  },
  "implementation": {
    "name": "CPython",
    "version": "3.11.8"
  },
  "platform": {
    "release": "5.10.209-198.812.amzn2.x86_64",
    "system": "Linux"
  },
  "pyOpenSSL": {
    "openssl_version": "",
    "version": null
  },
  "requests": {
    "version": "2.31.0"
  },
  "system_ssl": {
    "version": "300000b0"
  },
  "urllib3": {
    "version": "2.2.1"
  },
  "using_charset_normalizer": true,
  "using_pyopenssl": false
}
```

<!-- This command is only available on Requests v2.16.4 and greater. Otherwise,
please provide some basic information about your system (Python version,
operating system, &c). -->



================================================================================
MODEL 1: kwaipilot/kat-coder-pro:free
================================================================================

Status: ✓ SUCCESS

Result Length: 3570 characters

Full Result:
--------------------------------------------------------------------------------
# Analysis of the GitHub Issue: Leading Slash in URI Followed by Column Fails

## Core Logic Summary

Based on the provided code snippets, I can identify the core logic related to URL encoding and request handling in the requests library:

**Key Files and Logic:**
- `psf/requests/src/requests/models.py`:
  - Contains URL encoding logic for form data (`_encode_params` method)
  - Handles file encoding for multipart/form-data (`_encode_files` method)
  - Manages request body processing for streams and files
- `psf/requests/src/requests/utils.py`:
  - Contains URL parsing utilities and JSON encoding functions

## Detailed Analysis

### The Problem

The issue occurs when making a request to a URL with a leading slash followed by a colon, such as `http://127.0.0.1:10000//v:h`. The error trace shows:

1. The error originates in `urllib3/util/url.py` at line 425 in the `parse_url` function
2. An `AttributeError` occurs because a regex match returns `None`, and the code tries to call `.groups()` on it
3. This leads to a `LocationParseError` with the message "Failed to parse: //v:h"

### Root Cause

The problem lies in the URL parsing logic within urllib3 (which requests uses as its underlying HTTP library). When the URL path contains `//v:h`, the parser incorrectly interprets this as a malformed host:port combination rather than a valid path component.

### Code Context

From the provided snippets, I can see the URL encoding logic in `models.py`:

```python
@staticmethod
def _encode_params(data):
    """Encode parameters in a piece of data.
    
    Will successfully encode parameters when passed as a dict or a list of
    tuples. Order is retained if data is a list of tuples but arbitrary
    if parameters are supplied as a dict.
    """
    if isinstance(data, (str, bytes)):
        return data
    elif hasattr(data, "read"):
        return data
    elif hasattr(data, "__iter__"):
        result = []
        for k, vs in to_key_val_list(data):
            if isinstance(vs, basestring) or not hasattr(vs, "__iter__"):
                vs = [vs]
            for v in vs:
                if v is not None:
                    result.append(
                        (
                            k.encode("utf-8") if isinstance(k, str) else k,
                            v.encode("utf-8") if isinstance(v, str) else v,
                        )
                    )
        return urlencode(result, doseq=True)
    else:
        return data
```

However, this encoding logic is not directly involved in the URL parsing issue. The problem occurs earlier in the request lifecycle when urllib3 attempts to parse the URL structure.

### Expected vs Actual Behavior

**Expected:** The URL `http://127.0.0.1:10000//v:h` should be parsed correctly, with `//v:h` treated as the path component.

**Actual:** The URL parser incorrectly interprets `//v:h` as a malformed host specification, causing the parsing to fail.

### Potential Solutions

1. **URL Normalization**: The requests library could normalize URLs before passing them to urllib3 to ensure proper parsing
2. **Improved URL Parsing**: The urllib3 URL parsing logic could be enhanced to better handle edge cases with consecutive slashes
3. **Error Handling**: Better error messages could be provided to help users understand what went wrong

### System Context

The issue occurs with:
- Python 3.11.8
- requests 2.31.0
- urllib3 2.2.1
- Linux platform

This appears to be a parsing edge case that affects how URLs with specific path patterns are handled by the underlying HTTP client library.

================================================================================
MODEL 2: qwen/qwen3-coder:free
================================================================================

Status: ✓ SUCCESS

Result Length: 2852 characters

Full Result:
--------------------------------------------------------------------------------
### Summary of Code Snippets

The provided code snippets are from the `psf/requests` repository, specifically from `src/requests/models.py` and `src/requests/utils.py`. These files contain logic for handling request bodies, encoding data (including JSON and multipart forms), and managing file uploads. Key functionalities include:

1. **JSON Encoding**: Handling JSON payload encoding, ensuring compatibility between Python 2 and 3 by converting Unicode strings to bytes.
2. **File Handling**: Encoding files for multipart/form-data requests, supporting various tuple formats for file metadata.
3. **Stream Detection**: Identifying and processing streamed request bodies, including handling file positions for rewinding.
4. **Data Encoding**: Converting data into URL-encoded formats, handling strings, file-like objects, and iterables.
5. **Utility Functions**: Parsing link headers and handling null bytes in JSON encoding.

### Analysis of the Issue

The user reports a bug where a URL with a leading slash followed by a colon (e.g., `http://127.0.0.1:10000//v:h`) causes a `LocationParseError` in `urllib3`. The error originates from `urllib3.util.url.parse_url`, which fails to parse the malformed host `//v:h`. This is not directly related to the provided code snippets, as the issue lies in URL parsing within `urllib3`, not in `requests`' data or file handling logic.

### Final Answer

The issue you're encountering is due to a malformed URL (`http://127.0.0.1:10000//v:h`) that causes `urllib3` to fail during URL parsing. Specifically, the double slash followed by a colon (`//v:h`) is interpreted as an invalid host, leading to a `LocationParseError`. This is a limitation of `urllib3`'s URL parser, not a bug in the `requests` library itself.

#### Root Cause:
1. **URL Parsing Failure**: The `urllib3.util.url.parse_url` function cannot parse `//v:h` as a valid host:port combination, resulting in the error:
   ```
   AttributeError: 'NoneType' object has no attribute 'groups'
   ```
2. **Exception Propagation**: The failure in `urllib3` propagates up through `requests`, causing the request to fail entirely.

#### Workarounds:
1. **Correct the URL**: Ensure the URL is properly formatted. For example, if `v:h` is part of the path, it should be encoded or structured correctly:
   ```python
   requests.get('http://127.0.0.1:10000/v%3Ah')  # URL-encode the colon
   ```
2. **Preprocess URLs**: If you're dealing with dynamic URLs, validate and sanitize them before passing to `requests` to avoid malformed inputs.

#### Long-Term Fix:
This issue should ideally be addressed in `urllib3` by improving its URL parsing logic to handle edge cases more gracefully. You may want to report this to the `urllib3` project if it hasn't been already. For `requests`, no changes are needed since it correctly delegates URL parsing to `urllib3`.

================================================================================
MODEL 3: nvidia/nemotron-nano-9b-v2:free
================================================================================

Status: ✓ SUCCESS

Result Length: 3422 characters

Full Result:
--------------------------------------------------------------------------------
### Summary of Core Logic and File Paths
The provided code snippets from the `requests` library primarily focus on:
1. **Data encoding/serialization** (e.g., JSON, multipart/form-data bodies).
2. **File handling** for HTTP requests (multipart uploads, streamed bodies).
3. **URL parameter parsing** (e.g., converting dictionaries to query strings).

Key file paths:
- `psf/requests/src/requests/models.py`: Handles request body construction, data validation, and file parameter processing.
- `psf/requests/src/requests/utils.py`: Contains utility functions for parameter parsing and URL manipulation.

The code does not include logic for URL validation or normalization (e.g., handling malformed URLs like `http://example.com//path`). This is likely handled by `urllib3`, which `requests` relies on for low-level HTTP operations.

---

### Analysis of the User’s Issue
The error occurs because the URL `http://127.0.0.1:10000//v:h` contains a **leading slash after the domain** (`//v:h`), which `urllib3` fails to parse correctly. Here’s why:

1. **URL Structure Requirements**:
   - A valid URL after the domain (e.g., `example.com`) must start with a non-slash character (e.g., `/v/h` → valid) or be an empty string (for root paths).
   - A double slash (`//`) in this context is interpreted as an invalid path segment, causing `urllib3` to raise a `LocationParseError`.

2. **Root Cause**:
   - The URL `http://127.0.0.1:10000//v:h` is malformed due to the double slash. `urllib3` expects only a single slash after the domain to denote the start of the path.

3. **Reproduction in the `requests` Context**:
   - The `requests.get(...)` call triggers `urllib3`'s URL parser, which fails here. Since `requests` does not implement custom URL validation, the error stems from the external library (`urllib3`).

---

### Solution and Recommendations
Based on the provided code and error context, the issue is **not a bug in the `requests` library** but rather an invalid URL format. Here’s how to resolve it:

#### 1. **Fix the URL Query**
   - Remove one of the slashes in `http://127.0.0.1:10000//v:h` → `http://127.0.0.1:10000/v:h`.
   - If `/v:h` is an invalid path, ensure the endpoint supports this exact path structure.

#### 2. **Validation on Client Side (Optional)**
   - Add pre-flight URL validation in the client code to avoid malformed URLs:
     ```python
     from urllib.parse import urlparse

     def validate_url(url):
         parsed = urlparse(url)
         path = parsed.path.lstrip('/')  # Remove leading slashes
         if path.startswith('//'):  # Detect invalid double slashes
             raise ValueError("Invalid URL: Remove leading double slash")
         return parsed
     ```

#### 3. **Potential Server-Side Fix (If Path is Expected to Have Double Slash)**
   - If the server expects `//v:h` as a valid path (unusual but possible), ensure the backend handles such edge cases. This is unlikely given standard URL conventions.

---

### Final Answer
The error arises because the URL `http://127.0.0.1:10000//v:h` is malformed due to the double slash (`//`) after the domain, which `urllib3` (and thus `requests`) cannot parse. The fix is to correct the URL to `http://127.0.0.1:10000/v:h`, ensuring only one slash separates the domain from the path. The provided `requests` code does not handle URL validation, so client-side validation or URL correction is required to resolve this issue.


================================================================================
MODEL 4: google/gemma-3-27b-it:free
================================================================================

Status: ✓ SUCCESS

Result Length: 4381 characters

Full Result:
--------------------------------------------------------------------------------
```text
## Analysis of the Issue and Relevant Code

The issue reported is a `urllib3.exceptions.LocationParseError` occurring when `requests.get()` is called with a URL containing a leading slash followed by a column (e.g., `'http://127.0.0.1:10000//v:h'`). The traceback indicates the error originates in `urllib3`'s `parse_url` function, specifically when attempting to extract the host and port.  The provided code snippets from the `requests` library offer insight into how data and files are handled during requests, but do not directly address URL parsing. However, they reveal how the request body is prepared, which is relevant because malformed URLs can impact the overall request process.

Here's a breakdown of the relevant code:

*   **`psf/requests/src/requests/models.py`**: This file contains core request logic. Snippets show how the request body is encoded based on the type of data provided (e.g., JSON, streams, files).  It handles encoding data for `multipart/form-data` requests when files are included. It also includes error handling for invalid JSON.
*   **`psf/requests/src/requests/utils.py`**: This file contains utility functions, including some related to URL handling (though not the specific parsing error).

**Core Logic Summary:**

The code focuses on building and encoding the request body. It supports various data types, including:

*   JSON data: Encodes JSON data into a byte string, handling potential `ValueError` exceptions during JSON serialization.
*   Streaming data: Allows sending data as a stream, recording the initial file position for potential rewinding during redirects.
*   Files: Handles encoding files for `multipart/form-data` requests, accepting different tuple formats for specifying filename, file object, content type, and custom headers.
*   General data: Encodes key-value pairs into a URL-encoded string.

**The root cause is not within the provided code snippets.** The error occurs during URL parsing within the `urllib3` library, which `requests` uses internally. The issue is that `urllib3`'s `parse_url` function fails to correctly parse a URL with a leading slash immediately followed by a colon and a value (e.g., `//v:h`). This is likely due to an incorrect assumption about the URL structure within `urllib3`.

## Answer

The reported issue, a `urllib3.exceptions.LocationParseError` when using `requests.get()` with a URL like `'http://127.0.0.1:10000//v:h'`, is caused by a failure in the `urllib3` library's URL parsing logic.  Specifically, the `parse_url` function within `urllib3` is unable to handle a URL where a leading slash is immediately followed by a colon and a value.

The provided code snippets from the `requests` library itself are not directly responsible for this error. They primarily deal with *how* the request body is constructed and encoded *after* the URL has been parsed.  The snippets demonstrate how `requests` handles different data types (JSON, streams, files) and prepares them for transmission.

**Why this happens:**

The `urllib3` library likely expects a more standard URL format. A leading slash followed by a colon and value is not a valid part of a standard URL scheme (like `http` or `https`).  The `parse_url` function attempts to extract the host and port from the URL, and the unexpected `//v:h` portion causes it to fail, resulting in the `AttributeError` and ultimately the `LocationParseError`.

**Workaround/Resolution:**

Unfortunately, based solely on the provided code, there's no direct fix within the `requests` library itself. The issue needs to be addressed in `urllib3`.  Possible workarounds include:

1.  **Correct the URL:** The most straightforward solution is to ensure the URL is correctly formatted.  If the intention is to access a path, it should be properly encoded after the hostname and port.
2.  **Update Libraries:** Ensure you are using the latest versions of both `requests` and `urllib3`.  The issue might have been resolved in a newer release.
3.  **Report to `urllib3`:**  Report the issue to the `urllib3` project on their issue tracker (e.g., GitHub) so they can address the parsing error.

In summary, the problem lies within the underlying `urllib3` library's URL parsing, and the provided `requests` code snippets are not the source of the error, but rather demonstrate how `requests` utilizes `urllib3` to handle the request.
```

================================================================================
MODEL 5: openai/gpt-oss-120b:free
================================================================================

Status: ✗ ERROR

Error: Error code: 404 - {'error': {'message': 'No endpoints found matching your data policy (Free model publication). Configure: https://openrouter.ai/settings/privacy', 'code': 404}}

================================================================================
